eliminar producto del carrito

--- a/public/carrito.html
+++ b/public/carrito.html
@@ -77,31 +77,59 @@
       })
         .then(async (res) => {
           const data = await res.json();
-          if (!res.ok) {
-            carrito.innerHTML = `<li class="text-gray-600">${data.message}</li>`;
+
+          if (!res.ok || data.length === 0) {
+            carrito.innerHTML = `<li class="text-gray-600">${
+              data.message || "Tu carrito está vacío"
+            }</li>`;
             comprarBtn.disabled = true;
             comprarBtn.classList.add("opacity-50", "cursor-not-allowed");
             return;
           }
 
+          carrito.innerHTML = "";
           let total = 0;
+
           data.forEach((item) => {
-            const li = document.createElement("li");
             const subtotal = item.cantidad * item.Product.precio;
             total += subtotal;
-            li.className = "bg-white p-4 rounded shadow";
+
+            const li = document.createElement("li");
+            li.className =
+              "bg-white p-4 rounded shadow flex justify-between items-center";
             li.innerHTML = `
-          <strong>${item.Product.nombre}</strong> x${item.cantidad} - $${item.Product.precio} (Subtotal: $${subtotal})
+          <div>
+            <strong>${item.Product.nombre}</strong> x${item.cantidad} - $${item.Product.precio} (Subtotal: $${subtotal})
+          </div>
+          <button data-id="${item.id}" class="borrar px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600">❌</button>
         `;
             carrito.appendChild(li);
           });
 
           const liTotal = document.createElement("li");
+          liTotal.className = "text-right font-bold";
           liTotal.innerHTML = `<strong>Total: $${total}</strong>`;
           carrito.appendChild(liTotal);
+
+          // eliminar productos
+          document.querySelectorAll(".borrar").forEach((btn) => {
+            btn.addEventListener("click", async () => {
+              const res = await fetch(`/api/carrito/${btn.dataset.id}`, {
+                method: "DELETE",
+                headers: { Authorization: "Bearer " + token },
+              });
+
+              if (res.ok) {
+                alert("Producto eliminado");
+                window.location.reload();
+              } else {
+                alert("Error al eliminar producto");
+              }
+            });
+          });
         })
-        .catch((err) => {
-          carrito.innerHTML = `<li class="text-red-600">Error al cargar el carrito.</li>`;
+        .catch(() => {
+          carrito.innerHTML = `<li class="text-red-600">Error al cargar el carrito</li>`;
           comprarBtn.disabled = true;
         });
 
